force-app/main/default/objects/Case/fields/Alleged_Hardware_Issue__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Hardware_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alleged Hardware Issue</label>
    <type>Checkbox</type>
</CustomField>