force-app/main/default/objects/Case/fields/Alleged_Injury__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Injury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alleged Injury</label>
    <type>Checkbox</type>
</CustomField>