force-app/main/default/objects/Case/fields/Alleged_Issue__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Issue__c</fullName>
    <label>Alleged Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alignment</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Bluetooth</fullName>
            </value>
            <value>
                <fullName>Burr/rough edges</fullName>
            </value>
            <value>
                <fullName>Button/Touchscreen/Knob</fullName>
            </value>
            <value>
                <fullName>Coating</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Deformed</fullName>
            </value>
            <value>
                <fullName>Dirty</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Error Codes</fullName>
            </value>
            <value>
                <fullName>Fan</fullName>
            </value>
            <value>
                <fullName>Firmware</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Heat</fullName>
            </value>
            <value>
                <fullName>Incorrectly assembled parts</fullName>
            </value>
            <value>
                <fullName>Injection molding process</fullName>
            </value>
            <value>
                <fullName>Leaking</fullName>
            </value>
            <value>
                <fullName>Measurement</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Noise</fullName>
            </value>
            <value>
                <fullName>Odor</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Shrinkage marks visible</fullName>
            </value>
            <value>
                <fullName>Third-party</fullName>
            </value>
            <value>
                <fullName>Stability</fullName>
            </value>
            <value>
                <fullName>Poor welding</fullName>
            </value>
            <value>
                <fullName>Uneven side gaps</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>