force-app/main/default/objects/Case/fields/Alleged_Property_Damage__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Property_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alleged Property Damage</label>
    <type>Checkbox</type>
</CustomField>