force-app/main/default/objects/Case/fields/AS_URL_LInk__c.field-meta.xml
<CustomField>
    <fullName>AS_URL_LInk__c</fullName>
    <formula>AS_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AS URL LInk</label>
    <type>Text</type>
</CustomField>