force-app/main/default/objects/Case/fields/Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Assigned_At__c</fullName>
    <label>Assigned At</label>
    <type>DateTime</type>
</CustomField>