force-app/main/default/objects/Case/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>