force-app/main/default/objects/Case/fields/Case_Article_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Case_Article_Recommendations__c</fullName>
    <label>Case Article Recommendations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>