force-app/main/default/objects/Case/fields/Channel_Seller__c.field-meta.xml
<CustomField>
    <fullName>Channel_Seller__c</fullName>
    <label>Channel/Seller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>App (VeSync)</fullName>
            </value>
            <value>
                <fullName>Bed Bath &amp; Beyond</fullName>
            </value>
            <value>
                <fullName>Best Buy</fullName>
            </value>
            <value>
                <fullName>Chewy</fullName>
            </value>
            <value>
                <fullName>Costco</fullName>
            </value>
            <value>
                <fullName>Gift/courtesy</fullName>
            </value>
            <value>
                <fullName>Home Depot</fullName>
            </value>
            <value>
                <fullName>Kohl&apos;s</fullName>
            </value>
            <value>
                <fullName>Lowe&apos;s</fullName>
            </value>
            <value>
                <fullName>Macy&apos;s</fullName>
            </value>
            <value>
                <fullName>Other seller (leave note)</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Staples</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>Walmart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>