force-app/main/default/objects/Case/fields/Claims_Injury__c.field-meta.xml
<CustomField>
    <fullName>Claims_Injury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claims Injury</label>
    <type>Checkbox</type>
</CustomField>