force-app/main/default/objects/Case/fields/Cut_Cord__c.field-meta.xml
<CustomField>
    <fullName>Cut_Cord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cut Cord</label>
    <type>Checkbox</type>
</CustomField>