force-app/main/default/objects/Case/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only locations associated to selected subsidiary will be available</inlineHelpText>
    <label>Delivery Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.Subsidiary__c</field>
            <operation>equals</operation>
            <valueField>$Source.Subsidiary__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>