force-app/main/default/objects/Case/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Fry basket does not close properly</fullName>
            </value>
            <value>
                <fullName>Fry basket inconvenient to assemble/disassemble</fullName>
            </value>
            <value>
                <fullName>Gap/offset too large</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>App crashes</fullName>
            </value>
            <value>
                <fullName>Push notifications delay</fullName>
            </value>
            <value>
                <fullName>Registration/login issues</fullName>
            </value>
            <value>
                <fullName>Bluetooth Pairing Issues</fullName>
            </value>
            <value>
                <fullName>Bluetooth Scanning Failure</fullName>
            </value>
            <value>
                <fullName>Auto-press button issues</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Bubbling</fullName>
            </value>
            <value>
                <fullName>Peeling</fullName>
            </value>
            <value>
                <fullName>Rust</fullName>
            </value>
            <value>
                <fullName>Scratches</fullName>
            </value>
            <value>
                <fullName>Button/Touchscreen/Knob Damaged</fullName>
            </value>
            <value>
                <fullName>Door latch/hinge broken</fullName>
            </value>
            <value>
                <fullName>Fry bucket decorative panel cracked</fullName>
            </value>
            <value>
                <fullName>Fry bucket front panel falling off</fullName>
            </value>
            <value>
                <fullName>Fry bucket rubber plug falling off</fullName>
            </value>
            <value>
                <fullName>Handle dent</fullName>
            </value>
            <value>
                <fullName>Housing dent</fullName>
            </value>
            <value>
                <fullName>Screen dent</fullName>
            </value>
            <value>
                <fullName>Top cover lifting up</fullName>
            </value>
            <value>
                <fullName>Fry basket deformation</fullName>
            </value>
            <value>
                <fullName>Plug Deformation</fullName>
            </value>
            <value>
                <fullName>Housing deformation</fullName>
            </value>
            <value>
                <fullName>Air bubbles</fullName>
            </value>
            <value>
                <fullName>Basket/outer basket body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>