force-app/main/default/objects/Case/fields/DSRR_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>DSRR_Request_Details__c</fullName>
    <label>DSRR Request Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DSRR_Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Non-Discrimination</fullName>
            </value>
            <value>
                <fullName>Opt-out of Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portability</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Opt-out of sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>