force-app/main/default/objects/Case/fields/ERP_Replacement_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Replacement_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ERP Replacement Order</label>
    <referenceTo>ERP_Replacement_Order__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>