force-app/main/default/objects/Case/fields/Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Date__c</fullName>
    <description>Utilized in daily scheduled batch for sending out notification to Case Owners</description>
    <label>Escalated Date</label>
    <type>Date</type>
</CustomField>