force-app/main/default/objects/Case/fields/External_System_Name__c.field-meta.xml
<CustomField>
    <fullName>External_System_Name__c</fullName>
    <label>External System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>