force-app/main/default/objects/Case/fields/Feedback_Detail__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Detail__c</fullName>
    <label>Feedback Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Difficulty filling out registration</fullName>
            </value>
            <value>
                <fullName>Difficulty finding batch #</fullName>
            </value>
            <value>
                <fullName>Difficulty finding model #</fullName>
            </value>
            <value>
                <fullName>Insufficient Support</fullName>
            </value>
            <value>
                <fullName>QR code issues</fullName>
            </value>
            <value>
                <fullName>Short warranty period</fullName>
            </value>
            <value>
                <fullName>Slow Response</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory customer service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>