force-app/main/default/objects/Case/fields/Feedback_Reason__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Reason__c</fullName>
    <label>Feedback Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After-Sales Service</fullName>
            </value>
            <value>
                <fullName>Customer Review</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>General Appearance</fullName>
            </value>
            <value>
                <fullName>General Feedback</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Marketing/UX/Sales</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Physical Sensitivities</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Demo Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>