force-app/main/default/objects/Case/fields/Feedback_SubReason__c.field-meta.xml
<CustomField>
    <fullName>Feedback_SubReason__c</fullName>
    <label>Feedback SubReason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ability to turn off some bulbs</fullName>
            </value>
            <value>
                <fullName>Accessories hard to use</fullName>
            </value>
            <value>
                <fullName>Add backlight feature</fullName>
            </value>
            <value>
                <fullName>Add calibration function</fullName>
            </value>
            <value>
                <fullName>Add Chinese option in app</fullName>
            </value>
            <value>
                <fullName>Add decimal places to &quot;g&quot; unit</fullName>
            </value>
            <value>
                <fullName>Add Desktop Shortcut</fullName>
            </value>
            <value>
                <fullName>Additional language</fullName>
            </value>
            <value>
                <fullName>Add magnetic feature</fullName>
            </value>
            <value>
                <fullName>Add Pregnancy Mode</fullName>
            </value>
            <value>
                <fullName>Add Product Warning Information to Listing</fullName>
            </value>
            <value>
                <fullName>Add switch</fullName>
            </value>
            <value>
                <fullName>Air hose too short</fullName>
            </value>
            <value>
                <fullName>Air Output Cold</fullName>
            </value>
            <value>
                <fullName>Alert Sound Too Loud</fullName>
            </value>
            <value>
                <fullName>Alert Sound Too Quiet</fullName>
            </value>
            <value>
                <fullName>Allergic to Gel</fullName>
            </value>
            <value>
                <fullName>All settings feel the same</fullName>
            </value>
            <value>
                <fullName>App cannot find product</fullName>
            </value>
            <value>
                <fullName>App features limited</fullName>
            </value>
            <value>
                <fullName>App forces logout</fullName>
            </value>
            <value>
                <fullName>App Surveys Users Too Early</fullName>
            </value>
            <value>
                <fullName>Arm strap size not suitable</fullName>
            </value>
            <value>
                <fullName>Auto-off occurs too quickly</fullName>
            </value>
            <value>
                <fullName>Auto-shutoff time needs adjustment</fullName>
            </value>
            <value>
                <fullName>Bag too short for easy covering</fullName>
            </value>
            <value>
                <fullName>Basket hard to insert</fullName>
            </value>
            <value>
                <fullName>Basket size issue</fullName>
            </value>
            <value>
                <fullName>Beep sound too loud</fullName>
            </value>
            <value>
                <fullName>Beep sound too soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>