force-app/main/default/objects/Case/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>User Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>