force-app/main/default/objects/Case/fields/First_Reply_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>First_Reply_Time_Minutes__c</fullName>
    <label>First Reply Time - Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>