force-app/main/default/objects/Case/fields/Full_Resolution_Time_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Full_Resolution_Time_Business_Hours__c</fullName>
    <label>Full Resolution Time - Business Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>