force-app/main/default/objects/Case/fields/High_Priority_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Priority Confirmed</label>
    <type>Checkbox</type>
</CustomField>