force-app/main/default/objects/Case/fields/High_Priority_Identified__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Priority Identified</label>
    <type>Checkbox</type>
</CustomField>