force-app/main/default/objects/Case/fields/Initially_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Initially_Assigned_At__c</fullName>
    <label>Initially Assigned At</label>
    <type>DateTime</type>
</CustomField>