force-app/main/default/objects/Case/fields/Inquiry_Details__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Details__c</fullName>
    <label>Inquiry Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inquiry_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Cancel Order</fullName>
            </value>
            <value>
                <fullName>Discount Not Applied</fullName>
            </value>
            <value>
                <fullName>Lost/Stolen Package (Delivered)</fullName>
            </value>
            <value>
                <fullName>Missing Parts (Upon Receipt)</fullName>
            </value>
            <value>
                <fullName>Package Contains Foreign Objects</fullName>
            </value>
            <value>
                <fullName>Packaging/product damaged in transit</fullName>
            </value>
            <value>
                <fullName>Price Match</fullName>
            </value>
            <value>
                <fullName>Received Used Product</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Return to Sender (Claim)</fullName>
            </value>
            <value>
                <fullName>Return to Sender (Status)</fullName>
            </value>
            <value>
                <fullName>Shipment Status/Tracking Information</fullName>
            </value>
            <value>
                <fullName>Stuck in Transit</fullName>
            </value>
            <value>
                <fullName>Unable to receive Package</fullName>
            </value>
            <value>
                <fullName>Wrong Item Shipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>