force-app/main/default/objects/Case/fields/Last_Reply_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Reply_Time__c</fullName>
    <label>Last Reply Time</label>
    <type>DateTime</type>
</CustomField>