force-app/main/default/objects/Case/fields/Left_Negative_Review__c.field-meta.xml
<CustomField>
    <fullName>Left_Negative_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Negative Review</label>
    <type>Checkbox</type>
</CustomField>