force-app/main/default/objects/Case/fields/Main_Category__c.field-meta.xml
<CustomField>
    <fullName>Main_Category__c</fullName>
    <label>Main Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Appearance Issues</fullName>
            </value>
            <value>
                <fullName>Hardware Issues</fullName>
            </value>
            <value>
                <fullName>High Priority Issues</fullName>
            </value>
            <value>
                <fullName>Production Issues</fullName>
            </value>
            <value>
                <fullName>Software Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>