force-app/main/default/objects/Case/fields/Need_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Need_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Follow Up?</label>
    <type>Checkbox</type>
</CustomField>