force-app/main/default/objects/Case/fields/On_Hold_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Time_Minutes__c</fullName>
    <label>On Hold Time - Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>