force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appearance Issue</fullName>
            </value>
            <value>
                <fullName>Hardware Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>