force-app/main/default/objects/Case/fields/Recall__c.field-meta.xml
<CustomField>
    <fullName>Recall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recall ?</label>
    <type>Checkbox</type>
</CustomField>