force-app/main/default/objects/Case/fields/Refund_Account__c.field-meta.xml
<CustomField>
    <fullName>Refund_Account__c</fullName>
    <label>Refund Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>