force-app/main/default/objects/Case/fields/Refund_Method__c.field-meta.xml
<CustomField>
    <fullName>Refund_Method__c</fullName>
    <label>Refund Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cosori.com</fullName>
            </value>
            <value>
                <fullName>Etekcity.com</fullName>
            </value>
            <value>
                <fullName>Levoit.com</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Venmo Refund email/username</fullName>
            </value>
            <value>
                <fullName>Vesync app</fullName>
            </value>
            <value>
                <fullName>Wal-mart-direct refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>