force-app/main/default/objects/Case/fields/Related_to_HEPA__c.field-meta.xml
<CustomField>
    <fullName>Related_to_HEPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related to HEPA</label>
    <type>Checkbox</type>
</CustomField>