force-app/main/default/objects/Case/fields/Replies__c.field-meta.xml
<CustomField>
    <fullName>Replies__c</fullName>
    <label>Replies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>