force-app/main/default/objects/Case/fields/Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Requester_Email__c</fullName>
    <formula>Requester__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Email</label>
    <type>Text</type>
</CustomField>